fixes icons alignment

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -62,6 +62,9 @@
     margin: 0 10px; 
     vertical-align: middle; 
   }
+  .btm-footer{
+    display: block !important;
+  }
 }
 
 .btm-footer {
