--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,6 +1,6 @@
 .intro {
   width: 80%;
-  padding-top: 30%;
+  padding-top: 25%;
   position: relative;
   left: 10%;
   color: white;
